# static_pointcloud_publisher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
src/: static_pointcloud_publisher.cpp
